--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Verdana:wght@400;700&display=swap');
-
 * {
   box-sizing: border-box;
 }
@@ -86,6 +84,13 @@ img {
   position: relative;
   text-align: center;
   width: 500px;
+}
+
+h2 {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 8px;
+  border-radius: 4px;
+  margin: 0 0 40px;
 }
 
 h1 {
